syntax = "proto3";

package projection;

service Projection {
  rpc Project (stream ProjectionContext) returns (stream ProjectionResult);
}

message ProjectionContext {
  string eventType = 1;
  string eventId = 2;
  string stream = 3;
  string eventJson = 4;
}

message ResponseContext {
  string eventId = 1;
}

message Ignore {}

message Index {
  string id = 1;
  string document = 2;
}

message Update {
  string id = 1;
  string document = 2;
}

message UpdateScript {
  string id = 1;
  Script script = 2;
}

message Delete {
  string id = 1;
}

message Script {
  string lang = 1;
  string source = 2;
  string params = 3;
}

message ProjectionResult {
  ResponseContext context = 1;
  oneof operation {
    Ignore ignore = 2;
    Index index = 3;
    Update update = 4;
    UpdateScript updateScript = 5;
    Delete delete = 6;
  }
}
